ApiApp1/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apiapp1
spec:
  replicas: 3
  selector:
    matchLabels:
      name: apiapp1
  template:
    metadata:
      labels:
        name: apiapp1
    spec:
      containers:
        - name: apiapp1
          image: apiapp1:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: web
