ApiApp1/k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: apiapp1
spec:
  type: LoadBalancer
  selector:
    name: apiapp1
  ports:
  - port: 8888
    targetPort: web
