ApiApp1/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
        - backend:
            serviceName: apiapp1-a
            servicePort: 8888
